fix: removed sections and fixed x overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,8 +599,6 @@ pre code {
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
 }
 
 .no-gutters {
